--- a/views/layouts/admin.pug
+++ b/views/layouts/admin.pug
@@ -25,3 +25,5 @@ html(lang="en")
     block scripts
       script(src="https://kit.fontawesome.com/0558074f37.js" crossorigin="anonymous")
       script(src="/js/sidebar.js")
+      script(src="/js/formatPhone.js")
+      script(src="/js/countTextArea.js")
