--- a/views/client/panel.pug
+++ b/views/client/panel.pug
@@ -5,8 +5,14 @@ block content
   div(class="max-w-7xl mx-auto")
     h1(class="md:text-4xl font-bold mb-6 text-center text-white") Panel de clientes
 
-    div(class="flex justify-between mb-6")
-      input(type="text" id='search-input' placeholder="Buscar cliente..." class="text-gray-300 text-sm py-2 w-full outline-none max-w-md px-4 rounded-md bg-gray-700 placeholder-gray-400 focus:ring-2 focus:ring-red-600")
+    div(class=" mb-6")
+      form(action=`/client/search/${id}` method="GET")
+        input(type="text" id='search-input' placeholder="Buscar cliente..." class="text-gray-300 text-sm py-2 w-full outline-none max-w-md px-4 rounded-md bg-gray-700 placeholder-gray-400 focus:ring-2 focus:ring-red-600")
+        button(type="submit" class="ml-[-30px] ")
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 text-white hover:text-indigo-300 mb-[-6px] ">
+            <path stroke-linecap="round" stroke-linejoin="round" d="m15.75 15.75-2.489-2.489m0 0a3.375 3.375 0 1 0-4.773-4.773 3.375 3.375 0 0 0 4.774 4.774ZM21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+          </svg>
+
 
     div(class="overflow-x-auto")
       table(class="w-full table-auto bg-gray-800 rounded-md shadow-lg")
