--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -2,14 +2,14 @@ extends ../layouts/index
 
 block content
   div(class=" w-full max-w-xl mx-auto flex flex-col mt-16 md:mt-40")
-    h1(class="text-center text-white text-xl  md:text-3xl font-bold border-red-300 cssanimation hu__hu__")=page
+    h1(class="text-center text-white text-xl  md:text-3xl font-bold border-red-300 ")=page
     if errores 
       div(id="errores" class="text-center rounded-md mt-10")
         each error in errores 
           p(class="text-white bg-red-600 my-2 text-center text-sm md:text-lg py-2 rounded-lg")=error.msg
 
 
-    div(class="shadow-2xl rounded-md px-2 mt-10")
+    div(class="shadow-md shadow-red-800 bg-gray-800 rounded-md px-2 mt-10")
       form(action="/auth/login" method="POST" class="space-y-2 max-w-lg  mx-auto")
         input(type="hidden" name="_csrf" value=csrfToken)
         div
@@ -23,7 +23,7 @@ block content
           a(href="/auth/forget-password" class="flex justify-end text-gray-400 hover:text-white hover:scale-95 transition-all duration-300 cursor-pointer font-bold") ¿Olvidaste tu contraseña?
 
         div(class="flex justify-center text-center py-5 ")
-          button(type="submit" class="flex justify-center items-center cursor-pointer bg-red-700 hover:bg-gray-700 text-white text-sm md:text-xl p-2 w-72 rounded-lg shadow-lg hover:shadow-red-700 hover:scale-90 transition-all duration-300 ") Iniciar Sesión
+          button(type="submit" class="flex justify-center items-center cursor-pointer bg-red-700 hover:bg-gray-700 text-white text-sm md:text-xl p-2 w-72 rounded-lg shadow-lg hover:shadow-red-700 hover:scale-90 transition-all duration-300 my-5") Iniciar Sesión
             i(class='bx bx-send text-white pl-2')
 
 
