--- a/views/client/edit.pug
+++ b/views/client/edit.pug
@@ -35,7 +35,7 @@ block content
         p(id="count" class="flex justify-end relative bottom-12  text-gray-400 text-xs mx-4") 0 / 100
 
       div(class="flex flex-col md:flex-row gap-4 justify-center items-center")
-        button(type="button" id="cancelar" class="w-full md:w-3/6 cursor-pointer font-bold bg-red-600  hover:bg-red-800 text-white text-sm md:text-xl p-[7px] rounded-lg shadow-lg hover:shadow-gray-600 hover:scale-90 transition-all duration-300") Cancelar
+        button(type="button" id="cancelar-edit" class="w-full md:w-3/6 cursor-pointer font-bold bg-red-600  hover:bg-red-800 text-white text-sm md:text-xl p-[7px] rounded-lg shadow-lg hover:shadow-gray-600 hover:scale-90 transition-all duration-300") Cancelar
 
         input(type="submit" class=" w-full md:w-3/6 cursor-pointer font-bold bg-gray-700 hover:bg-indigo-700 text-white text-sm md:text-xl rounded-lg shadow-lg hover:shadow-gray-700  hover:scale-90 p-[10px] transition-all duration-300" value="Crear Cliente")
 
