--- a/views/client/create.pug
+++ b/views/client/create.pug
@@ -32,7 +32,7 @@ block content
         label(form="address" class="block text-sm text-gray-400 font-semibold") Dirección
           small.ml-1 (Opcional)
         textArea( id="address" name="address" class="w-full px-4 py-2 bg-gray-700 rounded-lg placeholder-gray-400 outline-none text-gray-300 focus:ring-2 focus:ring-red-500" maxlength="100" placeholder="Dirección del cliente")=client ? client.address : ""
-        p(id="count" class="flex justify-end relative bottom-12  text-gray-400 text-xs mx-4") 0 / 100
+        p(id="count" class="count flex justify-end relative bottom-12  text-gray-400 text-xs mx-4") 0 / 100
 
       div(class="flex flex-col md:flex-row gap-4 justify-center items-center")
         button(type="button" id="cancelar-create" class="w-full md:w-3/6 cursor-pointer font-bold bg-red-600  hover:bg-red-800 text-white text-sm md:text-xl p-[7px] rounded-lg shadow-lg hover:shadow-gray-600 hover:scale-90 transition-all duration-300") Cancelar
