--- a/views/layouts/includes/sidebar-admin.pug
+++ b/views/layouts/includes/sidebar-admin.pug
@@ -2,7 +2,7 @@ aside(id="sidebar" class="fixed inset-y-0 left-0 w-64 bg-gray-800 lg:translate-x
   nav(class="mt-[100px] text-white")
     ul(class="space-y-4")
       li(class="flex items-center ")
-        a(href="#" class="flex hover:text-red-600") 
+        a(href="/" class="flex hover:text-red-600") 
           svg(xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6")
             path(stroke-linecap="round" stroke-linejoin="round" d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25")
 
@@ -77,7 +77,7 @@ aside(id="sidebar" class="fixed inset-y-0 left-0 w-64 bg-gray-800 lg:translate-x
             path(stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7")
         ul(class="submenu pl-4 hidden space-y-4")
           li
-            a(href="/client/create" class="loader flex items-center hover:text-red-500")
+            a(href="/device/create" class="loader flex items-center hover:text-red-500")
               svg(xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6")
                 path(stroke-linecap="round" stroke-linejoin="round" d="M18 7.5v3m0 0v3m0-3h3m-3 0h-3m-2.25-4.125a3.375 3.375 0 1 1-6.75 0 3.375 3.375 0 0 1 6.75 0ZM3 19.235v-.11a6.375 6.375 0 0 1 12.75 0v.109A12.318 12.318 0 0 1 9.374 21c-2.331 0-4.512-.645-6.374-1.766Z")
 
