--- a/views/device/create.pug
+++ b/views/device/create.pug
@@ -7,40 +7,44 @@ block content
       div(class="grid grid-cols-1 md:grid-cols-3 gap-6")
         div 
           label(for="client_id" class="block text-white font-semibold mb-2") Cliente
-          select(name="client_id" id="client_id" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 focus:ring-red-600")
+          select(name="client_id" id="client_id" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 text-sm focus:ring-red-600")
             option(value="") -Selecciona un cliente-
             each client in clients
               option(value=client.id)=`${client.name} ${client.last_name}`
         div 
           label(for="brand_id" class="block text-white font-semibold mb-2") Marca del Equipo
-          select(name="brand_id" id="brand_id" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 focus:ring-red-600")
+          select(name="brand_id" id="brand_id" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 text-sm focus:ring-red-600")
             option(value="") -Selecciona una marca-
+            each brand in brands 
+              option(value= brand.id)=brand.name
         div 
           label(for="model_id" class="block text-white font-semibold mb-2") Modelo del Equipo
-          select(name="model_id" id="model_id" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 focus:ring-red-600")
+          select(name="model_id" id="model_id" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 text-sm focus:ring-red-600")
             option(value="") -Selecciona un modelo-
+             each model in models 
+              option(value= model.id)=model.name
 
       div(class="grid grid-cols-1 md:grid-cols-2 gap-6")
         div 
           label(for="issue_description" class="block text-white font-semibold mb-2") Falla del equipo
-          select(name="issue_description" id="issue_description" class=" cursor-pointer w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 focus:ring-red-600")
-            option(value="" class="text-gray-300") -Selecciona un Falla-
+          select(name="issue_description" id="issue_description" class=" cursor-pointer w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 text-sm focus:ring-red-600")
+            option(value="" class="") -Selecciona un Falla-
             each category in categories
               optgroup(label=category.name class="text-sm cursor-pointer optgroup")
                 each problem in category.problems
-                  option(value=problem.id class="hidden")=problem.description
+                  option(value=problem.id)=problem.description
 
         div 
           label(for="serial_number" class="block text-white font-semibold mb-2") Serial del equipo
-          input(type="text" name="serial_number" id="serial_number" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 focus:ring-red-600 " placeholder="Serial Ejemplo: 45NGFS88SE" )
+          input(type="text" name="serial_number" id="serial_number" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 text-sm focus:ring-red-600 " placeholder="Serial Ejemplo: 45NGFS88SE" )
       div(class="grid grid-cols-1")
         label(for="description" class="block text-white font-semibold mb-2") Descripción del equipo
-        textarea(name="description" id="description" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 focus:ring-red-600" placeholder="Descripción del equipo" maxLength="100")
+        textarea(name="description" id="description" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 text-sm focus:ring-red-600" placeholder="Descripción del equipo" maxLength="100")
         p(id="count" class="count flex justify-end relative bottom-5  text-gray-400 text-xs mx-4") 0 / 100
 
       div(class="grid grid-cols-1")
         label(for="imagen" class="block text-white font-semibold mb-2") Imagen del equipo
-        input(type="file" name="imagen" id="imagen" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 focus:ring-red-600 cursor-progress")
+        input(type="file" name="imagen" id="imagen" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 text-sm focus:ring-red-600 cursor-progress")
 
       div(class="flex flex-col md:flex-row gap-4 justify-center items-center mt-10")
         button(type="button" id="cancelar-create" class="w-full md:w-3/6 cursor-pointer font-bold bg-red-600  hover:bg-red-800 text-white text-sm md:text-xl p-[7px] rounded-lg shadow-lg hover:shadow-gray-600 hover:scale-90 transition-all duration-300") Cancelar
