--- a/views/device/create.pug
+++ b/views/device/create.pug
@@ -3,14 +3,17 @@ extends ../layouts/admin
 block content
   div(class="max-w-4xl mx-auto bg-gray-800 p-8 rounded-lg shadow-lg")
     h2(class="text-base md:text-2xl font-bold text-center text-white mb-8")=page
-    form(action="" method="" class="grid grid-rows-auto gap-6 ")
+    form(action="/device/create" method="POST" class="grid grid-rows-auto gap-6 ")
+      input(type="hidden" name="_csrf" value=csrfToken)
       div(class="grid grid-cols-1 md:grid-cols-3 gap-6")
         div 
           label(for="client_id" class="block text-white font-semibold mb-2") Cliente
           select(name="client_id" id="client_id" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 text-sm focus:ring-red-600")
             option(value="") -Selecciona un cliente-
             each client in clients
-              option(value=client.id)=`${client.name} ${client.last_name}`
+              option(value=client.id )=`${client.name} ${client.last_name}`
+          if errors
+            span(class="text-red-500 text-xs mx-2")=errors.client_id ? errors.client_id.msg : ""
         div 
           label(for="brand_id" class="block text-white font-semibold mb-2") Marca del Equipo
           select(name="brand_id" id="brand_id" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 text-sm focus:ring-red-600")
@@ -21,8 +24,8 @@ block content
           label(for="model_id" class="block text-white font-semibold mb-2") Modelo del Equipo
           select(name="model_id" id="model_id" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 text-sm focus:ring-red-600")
             option(value="") -Selecciona un modelo-
-             each model in models 
-              option(value= model.id)=model.name
+              each model in models 
+                option(value= model.id)=model.name
 
       div(class="grid grid-cols-1 md:grid-cols-2 gap-6")
         div 
